# src/routes/users/index.ts
@@ -3,10 +3,17 @@ import { NextFunction} from "express"
 import { RequestMiddleware, ResponseMiddleware } from "../../middlewares/middlewares.interface";
 import authentication from "../../middlewares/authentication";
 import UserController from "../../controller/users";
+import { body } from "express-validator";
 
 const router = express.Router();
 
-router.post("/user/signup", [], async (req:RequestMiddleware, res: ResponseMiddleware, next:NextFunction) => {
+router.post("/user/signup", [
+  body('email', 'email can not be empty').notEmpty(),
+  body('password', 'password can not be empty').notEmpty(),
+  body('password_confirmation', 'password_confirmation can not be empty').notEmpty(),
+  body('first_name','first_name can not be empty').notEmpty(),
+  body('last_name','last_name can not be empty').notEmpty()
+], async (req:RequestMiddleware, res: ResponseMiddleware, next:NextFunction) => {
   try {
     const userController = new UserController()
     const response = await userController.signUp(req.body)
@@ -50,5 +57,51 @@ router.delete("/user/:userId", [
     next(err);
   }
 });
+
+router.post('/user/:userId/company/:companyId',[
+  // @TODO operation available only for committe
+  authentication
+], async (req: RequestMiddleware, res: ResponseMiddleware, next: NextFunction)=> {
+  try{
+    const userController = new UserController()
+    const resp = await userController.addUserInCompany(req.params.userId,req.params.companyId )
+    res
+    .json({resp})
+    .status(200)
+    .send()
+  }  catch(error){
+      next(error)
+  }
+  })
+
+router.delete('/user/:userId/company/:companyId',[
+
+], async (req : RequestMiddleware,res: ResponseMiddleware,next: NextFunction)=> {
+  try{
+    const userController = new UserController()
+    const resp = await userController.deleteCompanyInUser(req.params.userId,req.params.companyId )
+    res
+    .json({resp})
+    .status(200)
+    .send()
+  }catch(error){
+    next(error)
+  }
+})
+
+
+router.get('/user/:userId/company/:companyId',[
+], async (req: RequestMiddleware,res: ResponseMiddleware,next: NextFunction)=> {
+    try{
+      const userController = new UserController()
+      const resp = await userController.checkUserInCompany(req.params.userId,req.params.companyId )
+      res
+      .status(200)
+      .json(resp)
+      .send()
+    }catch(error){
+      next(error)
+    }
+})
 const userRouter = router
 export default userRouter;
